@@ -1,4 +1,5 @@
 Changes since revision 164:
+*group box names are now reported when an object with the focus is in one. (Example: settings buttons, advanced tab, system properties dialog, control panel). 
 *NVDA can now read formatting changes in documents whilst reading with say all.
 *If your synthesizer is set to "auto" in nvda.ini (which it now is by default), NVDA will search for the first available synthesizer. Currently it looks for sapi5 and then sapi4 and then Viavoice. the more likely found synthesizers are first.
 *Fixed some crashes in MS Office applications
